# OpenBreath

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  VENDORING.md  partitions.csv  sdkconfig.defaults  sdkconfig.hil-devboard  sdkconfig.hil-devboard-uart  sdkconfig.hil-panda  sdkconfig.release
.github/workflows/: firmware-build.yml  release.yml
components/pb_board/: pb_board.c
components/pb_buttons/: CMakeLists.txt  pb_buttons.c  pb_buttons_sm.c
components/pb_evlog/: CMakeLists.txt  pb_evlog.c
components/pb_fan/: pb_fan.c
components/pb_heater/: CMakeLists.txt  pb_heater.c
components/pb_hil/: CMakeLists.txt  Kconfig.projbuild  pb_hil.c
components/pb_httpd/: CMakeLists.txt  pb_httpd.c
components/pb_leds/: Kconfig  (+2 more)
components/pb_portal/: CMakeLists.txt  pb_dns.c  pb_portal.c
components/pb_portal/include/: pb_dns.h  pb_portal.h
components/pb_portal/www/: app.html
docs/: FEATURES.md  HIL.md  NTC_CONVERSION.md  OEM_PARITY.md  SAFETY.md  api-v2.md
main/: CMakeLists.txt  app_main.c  dev_config.h.example
plans/: iteration-2-stock-parity-and-config.md
tests/: check_api_v2_contract.sh  check_dashboard_js.mjs  check_hil_compileout.sh  pb_buttons_host_test.c  pb_heater_fault_host_test.c  pb_heater_safety_host_test.c  pb_ntc_calibration_host_test.c  pb_ntc_status_host_test.c  pb_policy_host_test.c  run_buttons_host_test.sh  run_heater_fault_host_test.sh  run_heater_safety_host_test.sh  run_ntc_calibration_host_test.sh  run_ntc_status_host_test.sh  run_policy_host_test.sh  test_hil_runner.py
tools/: flash.py  hil.py  package_release.sh
(+41 files in other folders)
